--- a/fsv-backend/package.json
+++ b/fsv-backend/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "dev":"npx nodemon --exec npx babel-node src/server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -18,6 +19,8 @@
     "@babel/core": "^7.14.3",
     "@babel/node": "^7.14.2",
     "@babel/plugin-transform-runtime": "^7.14.3",
-    "@babel/preset-env": "^7.14.2"
+    "@babel/preset-env": "^7.14.2",
+    "nodeman": "^1.1.2",
+    "nodemon": "^2.0.7"
   }
 }
